[gd_scene load_steps=12 format=3 uid="uid://4fkqvw0xk8ra"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_wdbwf"]
[ext_resource type="Texture2D" uid="uid://bknptx6wuqvkd" path="res://cardover.png" id="2_7g26p"]
[ext_resource type="Texture2D" uid="uid://gxcpgcuj06xt" path="res://Sou_Desu_Ne.png" id="2_xq6kt"]
[ext_resource type="Texture2D" uid="uid://djuk0g87nhrhc" path="res://cardbutton.png" id="4_84wmg"]
[ext_resource type="Texture2D" uid="uid://ckina22q7em5y" path="res://cardbuttonhover.png" id="5_f6tys"]
[ext_resource type="Texture2D" uid="uid://d2bjrwsls2wp5" path="res://damageCounter.png" id="5_p2v7u"]
[ext_resource type="Texture2D" uid="uid://b1x4nb22w47b5" path="res://extraCounter.png" id="6_tkoyl"]
[ext_resource type="Theme" uid="uid://c2xsywtxro80x" path="res://Themes/button.tres" id="8_o7lry"]
[ext_resource type="Texture2D" uid="uid://btg5aam80nbly" path="res://accept.png" id="9_ru47b"]
[ext_resource type="Texture2D" uid="uid://bhmffm1trkxb3" path="res://reject.png" id="10_he2sa"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ekrpc"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:visible")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:rested")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("DamageCounter:visible")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("DamageCounter/Label:text")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:damage")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:trulyHidden")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath(".:z_index")
properties/8/spawn = true
properties/8/replication_mode = 2
properties/9/path = NodePath("ExtraCounter:visible")
properties/9/spawn = true
properties/9/replication_mode = 2
properties/10/path = NodePath("ExtraCounter/Label:text")
properties/10/spawn = true
properties/10/replication_mode = 2
properties/11/path = NodePath(".:extra_hp")
properties/11/spawn = true
properties/11/replication_mode = 2
properties/12/path = NodePath(".:onstage")
properties/12/spawn = true
properties/12/replication_mode = 2
properties/13/path = NodePath(".:attachedTo")
properties/13/spawn = true
properties/13/replication_mode = 2

[node name="Card" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_wdbwf")

[node name="Notice" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.05, 1.05)
texture = ExtResource("2_7g26p")

[node name="Front" type="Sprite2D" parent="."]
texture = ExtResource("2_xq6kt")

[node name="CardButton" type="TextureButton" parent="."]
offset_left = -155.0
offset_top = -215.0
offset_right = 154.0
offset_bottom = 214.0
texture_normal = ExtResource("4_84wmg")
texture_hover = ExtResource("5_f6tys")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ekrpc")

[node name="DamageCounter" type="Sprite2D" parent="."]
visible = false
position = Vector2(-110.667, -176)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_p2v7u")

[node name="Label" type="Label" parent="DamageCounter"]
offset_left = -48.0
offset_top = -30.2222
offset_right = 21.0
offset_bottom = 24.7778
rotation = -0.174533
auto_translate = false
theme_override_font_sizes/font_size = 40
text = "100"

[node name="Amount" type="Label" parent="."]
visible = false
offset_left = 101.333
offset_top = -250.667
offset_right = 187.333
offset_bottom = -181.667
auto_translate = false
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "x10"

[node name="ExtraCounter" type="Sprite2D" parent="."]
visible = false
position = Vector2(-88, -100)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_tkoyl")

[node name="Label" type="Label" parent="ExtraCounter"]
offset_left = -26.6667
offset_top = -40.8889
offset_right = 42.3333
offset_bottom = 14.1111
rotation = 0.174533
auto_translate = false
theme_override_font_sizes/font_size = 40
text = "100"

[node name="PotentialDamage" type="Label" parent="."]
visible = false
offset_left = -138.75
offset_top = -271.25
offset_right = -27.75
offset_bottom = -230.25
scale = Vector2(1.3, 1.3)
auto_translate = false
theme = ExtResource("8_o7lry")
theme_override_colors/font_color = Color(0.913725, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "20"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="PotentialDamage"]
z_index = -1
layout_mode = 0
offset_left = -8.0
offset_top = -7.0
offset_right = 225.0
offset_bottom = 46.0
color = Color(0.113725, 0.164706, 0.223529, 0.905882)

[node name="Accept" type="Button" parent="PotentialDamage"]
modulate = Color(1, 1, 1, 0.509804)
layout_mode = 0
offset_left = 120.0
offset_top = -3.75
offset_right = 180.0
offset_bottom = 56.25
scale = Vector2(0.75, 0.75)
icon = ExtResource("9_ru47b")
flat = true

[node name="Reject" type="Button" parent="PotentialDamage"]
modulate = Color(1, 1, 1, 0.509804)
layout_mode = 0
offset_left = 175.0
offset_top = -2.5
offset_right = 235.0
offset_bottom = 57.5
scale = Vector2(0.75, 0.75)
icon = ExtResource("10_he2sa")
flat = true

[connection signal="gui_input" from="CardButton" to="." method="_on_card_button_gui_input"]
[connection signal="mouse_entered" from="CardButton" to="." method="_on_card_button_mouse_entered"]
[connection signal="mouse_exited" from="CardButton" to="." method="_on_card_button_mouse_exited"]
[connection signal="pressed" from="CardButton" to="." method="_on_card_button_pressed"]
[connection signal="mouse_entered" from="PotentialDamage/Accept" to="." method="_on_accept_mouse_entered"]
[connection signal="mouse_exited" from="PotentialDamage/Accept" to="." method="_on_accept_mouse_exited"]
[connection signal="pressed" from="PotentialDamage/Accept" to="." method="_on_accept_pressed"]
[connection signal="mouse_entered" from="PotentialDamage/Reject" to="." method="_on_reject_mouse_entered"]
[connection signal="mouse_exited" from="PotentialDamage/Reject" to="." method="_on_reject_mouse_exited"]
[connection signal="pressed" from="PotentialDamage/Reject" to="." method="_on_reject_pressed"]
